클래스로 나누려다가 해보니 뭔가 이상해서 정리만